--- a/css/style.css
+++ b/css/style.css
@@ -468,9 +468,6 @@ display: flex;
   }
 }
 
-.peculiarities-list .peculiarities-item + .peculiarities-item {
-  /*  margin-left: 30px;*/
-}
 .peculiarities-item {
   width: calc(100% / 4);
   display: block;
@@ -693,6 +690,7 @@ display: flex;
 @media screen and (min-width: 768px) {
   .portfolio-list {
     display: flex;
+    justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 72px;
@@ -706,7 +704,7 @@ display: flex;
     flex-wrap: wrap;
   }
 }
-@media screen (min-width: 1158px) {
+@media screen and (min-width: 1158px) {
   .portfolio-item {
     width: calc((100% - 48px) / 3);
   }
@@ -1015,12 +1013,12 @@ display: flex;
     align-items: center;
     flex-direction: row;
   }
-  .main-footer-container{
+  .main-footer-container {
     flex-wrap: nowrap;
     gap: unset;
   }
   .footer-container {
-    margin-right: 120px;
+    margin-right: 100px;
   }
   .joing-conteiner {
     margin-right: 80px;
@@ -1117,36 +1115,257 @@ display: flex;
     max-width: 584px;
   }
 }
-/*-----Mobil menu----*/
-.menu-toggle {
-  min-height: 24px;
-  min-width: 24px;
+/*-----------Modal--------*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  visibility: hidden;
+  background-color: rgba(46, 47, 66, 0.4);
+  /* transition: opacity 250ms var(--timing-function),
+    visibility 250ms var(--timing-function);*/
+}
+.backdrop.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+  /* transform: translate(-50%, -50%) scale(0);*/
+}
+.modal {
+  width: 288px;
+  min-height: 584px;
+  border-radius: 4px;
+  background-color: #fcfcfc;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  padding: 72px 24px 24px 24px;
+  transition: transform 250ms var(--timing-function);
+}
+@media (min-width: 768px) {
+  .modal {
+    width: 408px;
+  }
+}
+
+.close-btn {
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  position: absolute;
+  right: 24px;
+  top: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 250ms var(--timing-function);
+}
+.close-btn:hover,
+.close-btn:focus {
+  background-color: var(--activ-soclink-color-team);
+}
+.modal-close-icon {
+  fill: #2e2f42;
+  transition: fill 250ms var(--timing-function);
+}
+.close-btn:hover .modal-close-icon,
+.close-btn:focus .modal-close-icon {
+  fill: var(--background-color);
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+/*----------Text----modal-----*/
+.form-fild {
+  margin-bottom: 10px;
+}
+.modal-title {
+  font-family: Roboto;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #212121;
+  margin-bottom: 16px;
+}
+.modal-input {
+  width: 100%;
+  height: 40px;
+  padding-bottom: 11px;
+  padding-top: 11px;
+  padding-left: 30px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
+  transition: fill 250ms var(--timing-function);
+}
+.modal-input:focus,
+.modal-coments:focus {
+  border: 1px solid var(--accent-color);
+}
+.modal-input:focus + .modal-icon {
+  fill: var(--accent-color);
+}
+.modal-box {
+  position: relative;
+}
+.modal-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+}
+.form-label {
+  display: block;
+  color: #8e8f99;
+
+  font-size: 12px;
+
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  padding: 0;
+  margin-bottom: 4px;
+}
+.form-fild-coments {
+  margin-bottom: 20px;
+}
+.modal-coments {
+  width: 100%;
+  height: 100px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  resize: none;
+  padding: 12px 16px;
+  outline: transparent;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-user {
+  display: block;
+  margin-bottom: 4px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: #757575;
+}
+.form-fild-check {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+}
+.check-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+  display: flex;
+  align-items: center;
+}
+.check-text::before {
+  content: "";
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  margin-right: 5px;
+}
+.input-check:checked + .check-text::before {
+  background-color: var(--accent-color);
+  background-image: url(../images/check.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  border-color: transparent;
+}
+.input-check:focus {
+  background-color: var(--accent-color);
+  background-image: url(../images/check.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  border-color: transparent;
+}
 
-  padding: 10px 0;
-  background-color: transparent;
+.check-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: var(--accent-color);
+  margin-left: 4px;
+}
+.modal-submit {
+  width: 169px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 4px;
+  border-color: transparent;
+  padding: 16px 32px;
+  text-align: center;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--background-color);
+  background-color: #4d5ae5;
+  transition: background-color 250ms var(--timing-function),
+    box-shadow 250ms var(--timing-function);
   cursor: pointer;
-  border: none;
-  outline: none;
+}
+.modal-submit:hover,
+.modal-submit:focus {
+  background-color: #404bbf;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
-@media screen and (min-width: 768px) {
-  .menu-toggle {
-    display: none;
-  }
+/*-----Mobil menu----*/
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 25px 45px;
+  visibility: hidden;
+  background-color: var(--background-color);
+  z-index: 1;
+  transform: translateX(100%);
+  transition: opacity transform 250ms var(--timing-function);
 }
-@media screen and (min-width: 1158px) {
-  .menu-toggle {
-    display: none;
-  }
+.menu-container.is-open {
+  transform: translateX(0);
+  visibility: visible;
 }
-&:hover,
-&:focus {
-  fill: var(--accent-color);
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
-
 .menu-toggle-close {
   position: absolute;
   top: 10px;
@@ -1160,122 +1379,97 @@ display: flex;
 .menu-toggle-close:focus {
   fill: var(--activ-soclink-color-team);
 }
-
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 25px 45px;
-  background-color: var(--background-color);
-  z-index: 1;
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-}
-.menu-container .is-open {
-  transform: translateX(0);
-}
-
 .menu-wrap {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 15%;
-  height: calc(100% - 170px);
+  padding-top: 72px;
 }
-
 .mobile-menu {
-  &__item {
-    padding: 15px 0;
-  }
-
-  &__link {
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.17;
-    letter-spacing: 0.02em;
-    color: var(--accent-color);
-
-    &:hover,
-    &:focus {
-      color: var(--accent-color);
-    }
-  }
-}
-
-.contact-menu {
-  &__item {
-    padding: 15px 0;
-  }
-
-  &__link {
-    &--tel {
-      font-weight: 500;
-      font-size: 34px;
-      line-height: 1.17;
-      letter-spacing: 0.02em;
-      color: var(--accent-color);
-
-      &:hover,
-      &:focus {
-        color: var(--activ-soclink-color-team);
-      }
-      @include mobile-320 {
-        font-size: 26px;
-      }
-    }
-    &--mail {
-      font-weight: 500;
-      font-size: 24px;
-      line-height: 1.17;
-      letter-spacing: 0.02em;
-      color: var(--activ-soclink-color-team);
-
-      &:hover,
-      &:focus {
-        color: var(--accent-color);
-      }
-    }
-  }
-}
-
-.menu-soc-list {
   display: flex;
-  gap: 20px;
-
-  @include mobile-320 {
-    flex-direction: column;
-  }
-
-  &__item {
-    position: relative;
-    display: flex;
-    align-items: center;
-  }
-
-  &__link {
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 1.22;
-    letter-spacing: 0.02em;
-    color: var(--accent-color);
-
-    &:hover,
-    &:focus {
-      color: var(--activ-soclink-color-team);
-    }
-  }
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: 168px;
+}
+.mobile-menu__link {
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0.72px;
+  margin-bottom: 40px;
+  color: var(--background-color-footer-main);
+}
+.mobile-menu__link:hover,
+.mobile-menu__link:focus {
+  color: var(--accent-color);
+}
+.contact-menu {
+  margin-bottom: 48px;
+}
+.contact-menu__item {
+  padding: 15px 0;
+}
+.contact-menu__link--tel {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
+  color: #434455;
+  transition: color var(--timing-function);
+}
+.contact-menu__link--tel:hover,
+.contact-menu__link--tel:focus {
+  color: var(--accent-color);
+}
+.contact-menu__link--mail {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.4px;
+  color: #434455;
+  transition: color var(--timing-function);
+}
+.contact-menu__link--mail:hover,
+.contact-menu__link--mail:focus {
+  color: var(--accent-color);
+}
+.mobil-joing-list {
+  display: flex;
+  gap: 16px;
+}
+.mobil-joing-item {
+  display: inline-block;
+}
+.mobil-joing-list .mobil-joing-item + .mobil-joing-item {
+  margin-left: 10px;
 }
 
-.menu-soc-list__link::before {
-  position: absolute;
-  bottom: 2px;
-  left: -10px;
-  width: 1px;
-  height: 100%;
-  content: "";
-
-  background-color: var(--background-color);
-  border-radius: 2px;
+.mobil-joing-link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: var(--background-color);
+  background-color: var(--accent-color);
+  transition: background-color 250ms var(--timing-function);
+}
+.mobil-joing-link:hover,
+.mobil-joing-link:focus {
+  background-color: var(--activ-soclink-color);
+}
+@media screen and (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .menu-toggle {
+    display: none;
+  }
 }
