--- a/css/styleold.css
+++ b/css/styleold.css
@@ -746,7 +746,7 @@ ul {
   right: 28px;
   transform: translateY(50%);
 }
-/*------overlay-----*/
+/*------modal-----*/
 .backdrop {
   position: fixed;
   top: 0;
@@ -974,3 +974,165 @@ ul {
   justify-content: center;
   align-items: center;
 }*/
+/*--------------Mobil-menu-------*/
+.menu-toggle {
+  min-height: 24px;
+  min-width: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+
+/*@media screen and (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+@media screen and (min-width: 1158px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+&:hover,
+&:focus {
+  fill: var(--accent-color);
+}*/
+
+.menu-toggle-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+.menu-toggle-close:hover,
+.menu-toggle-close:focus {
+  fill: var(--activ-soclink-color-team);
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 25px 45px;
+  background-color: var(--background-color);
+  z-index: 1;
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+.menu-container .is-open {
+  transform: translateX(0);
+}
+
+.menu-wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 15%;
+  height: calc(100% - 170px);
+}
+.mobile-menu {
+  display: flex;
+  
+}
+.mobile-menu__item {
+    padding: 15px 0;
+  }
+
+  .mobile-menu__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+  }
+    .mobile-menu__link:hover,
+    .mobile-menu__link:focus {
+      color: var(--accent-color);
+    }   
+  
+
+
+.contact-menu__item {
+    padding: 15px 0;
+  }
+
+  contact-menu__link{
+    &--tel {
+      font-weight: 500;
+      font-size: 34px;
+      line-height: 1.17;
+      letter-spacing: 0.02em;
+      color: var(--accent-color);}
+
+      &:hover,
+      &:focus {
+        color: var(--activ-soclink-color-team);
+      }
+      @include mobile-320 {
+        font-size: 26px;
+      }
+    }
+    &--mail {
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 1.17;
+      letter-spacing: 0.02em;
+      color: var(--activ-soclink-color-team);
+
+      &:hover,
+      &:focus {
+        color: var(--accent-color);
+      }
+    }
+  }
+}
+
+.menu-soc-list {
+  display: flex;
+  gap: 20px;
+
+  @include mobile-320 {
+    flex-direction: column;
+  }
+
+  &__item {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
+  &__link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+
+    &:hover,
+    &:focus {
+      color: var(--activ-soclink-color-team);
+    }
+  }
+}
+
+.menu-soc-list__link::before {
+  position: absolute;
+  bottom: 2px;
+  left: -10px;
+  width: 1px;
+  height: 100%;
+  content: "";
+
+  background-color: var(--background-color);
+  border-radius: 2px;
+}
